--- a/tex/results.tex
+++ b/tex/results.tex
@@ -89,7 +89,7 @@ Thus, the noise does not correspond to learned patterns anymore.
 Therefore, noise is not added to the input data but to each feature channel of the sensory systems' output separately.
 This experiment is considered more relevant for real-world scenarios, as future systems that deal with real-world data will have a much larger number of input channels and more diverse patterns, making it unlikely that noise resembles a learned pattern that the network considers valid.
 
-\begin{figure}[h]
+\begin{figure}[h!]
     \centering
     \includegraphics[width=0.65\textwidth]{noise_samples_channels}
     \caption[Effect of adding noise to the feature channels]{Effect of adding noise to the four feature channels (i.e. the output of the sensory system) of the images seen during training.The network input is shown on the left, the output of the sensory system with added noise in the middle, and the net fragments built by \emph{S1} on the right. The different colours indicate different feature channels.}
