--- a/tex/probabilistic_framework.tex
+++ b/tex/probabilistic_framework.tex
@@ -1,6 +1,6 @@
 %% probabilistic_framework.tex
 The introduction in \secref{intro_motivation} describes that preventing early commitment \cite{marr_vision_2010} is considered a fundamental property of the human visual system that is absent in current deep learning frameworks.
-The previous chapter introduced neuroscientific findings that could explain why this problem is absent in the human brain and that are considered the principles implementing the findings of the Gestalt psychology \cite{ellis_source_1938, kohler_gestalt_1992, wagemans_century_2012, hamlyn_psychology_2017}.
+The previous chapter introduced neuroscientific findings that could explain why the human brain has this ability and that are considered the principles implementing the findings of the Gestalt psychology \cite{ellis_source_1938, kohler_gestalt_1992, wagemans_century_2012, hamlyn_psychology_2017}.
 
 In the following, a novel framework incorporating these identified principles is proposed.
 The focus is on translating the two stages described in \secref{neuroscience_findings} into a computational framework.
@@ -10,7 +10,7 @@ While the inspiration and principles are based on previous research, a novel com
 \section{3-Staged Model}\seclbl{framework_3_staged_model}
 Some of the neuroscientific principles described in \secref{neuroscience_findings} have been explored in the theory of self-organising projection fibres \sidecite{wiskott_face_1996, wiskott_face_1997, fernandes_self-organization_2015} (c.f. \secref{projection_fibres}). However, these approaches do not yet scale to natural images except for human faces \sidecite{wolfrum_recurrent_2008}. This is because most work in this area has neglected to model the learning and the dynamics of rich sets of net fragments in the visual cortex, which are fundamental according to the theory of natural intelligence \sidecite{von_der_malsburg_theory_2022}.
 
-This section describes a novel system based on binary neurons with the potential to scale to natural images since it extends the projection fibres with net fragments.
+This chapter describes a novel system based on binary neurons with the potential to scale to natural images since it extends the projection fibres with net fragments.
 The proposed system comprises three main components: A first stage \emph{S0} that extracts features from the image, a stage \emph{S1} that builds an overlay of net fragments, and a stage \emph{S2} that uses projection fibres to map them to object prototypes.
 I call the stage \emph{S0} the sensory system, \emph{S1} the feature building stage, and \emph{S2} the prototype stage.
 In the context of biology, the sensory stage \emph{S0} could stand for the eyes translating visual information into neuronal activity \sidecite{grill-spector_human_2004}, \emph{S1} could stand for the primary visual cortex \sidecite{tong_primary_2003}, and \emph{S2} for the ventral stream \sidecite{goodale_separate_1992} and an area in the temporal cortex \cite{miyashita_inferior_1993}.
@@ -88,7 +88,7 @@ Subsampled or noisy vectors are still semantically similar and are close to the 
 Furthermore, the model builds consistency at every point in the network, making it more robust than when consistency is built at a single point \sidecite{wagner_robustness_2013}.
 
 \paragraph{Object-Independent Transformations.} The same projection fibres are applied to all object prototypes, allowing the model to learn object-independent transformations. For example, an object might be slightly stretched, rotated, or deformed compared to the stored prototypes. The projection fibres learn to ignore slight deformations independent of the object type. This allows the architecture to learn transformation invariance and to transfer this capability to new objects that have not been transformed in the training data.
-Furthermore, it allows adding objects dynamically to static reference frames, implementing lifelong learning \sidecite{parisi_continual_2019} without the risk of catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017, liu_overcoming_2021}.
+Furthermore, object-independent projection fibres allow adding objects dynamically to static reference frames, implementing lifelong learning \sidecite{parisi_continual_2019} without the risk of catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017, liu_overcoming_2021}.
 
 \section{Bernoulli Neuron}\seclbl{bernoulli_neuron}
 The previous section provided an overview of the proposed framework's inspiration, building blocks, and advantages. In the following, the building blocks are described in more detail, starting with the Bernoulli neuron.
@@ -96,13 +96,13 @@ In traditional neural networks, neurons exhibit dense activity, meaning that eve
 
 Preliminary experiments have indicated that using non-binary artificial neurons is not well suited for learning net fragments. For instance, dealing with weak or strong positive activations poses challenges when employing Hebbian updates.
 This suggests that implementing net fragments \sidecite{von_der_malsburg_concerning_2018}, similar to the human brain, requires using different principles than the ones used in classical neural networks. Inspired by neuroscientific findings, a probabilistic neuron that samples its activation from a Bernoulli distribution is introduced.
-Such a neuron is a binary neuron that does not fire when a certain threshold is reached but uses its internal state as a firing probability. A probabilistic neuron $a_i$ in the context of net fragments is modelled as a probability density function of the form:
+Such a neuron is a binary neuron that does not fire when a certain threshold is reached but uses its internal state as a firing probability. A Bernoulli neuron $a_i$ in the context of net fragments is modelled as a probability density function of the form:
 \begin{equation}
     p = P(a_i = \text{active} | \text{activity of neighborhood}, \text{environment}) 
 \end{equation}
 
 Thus, the probability of a neuron being active depends on the activity pattern of the neurons in its local neighbourhood and factors of the environment (e.g., inhibition or presence of neurotransmitters).
-Such a neuron can be implemented using a Bernoulli distribution, i.e., $B(p) = P(X = 1) = p = 1 - P(X=0)$. Having a neuron whose firing probability $p$ is governed by the neighbourhood activity and the environment allows the implementation of the behaviour of net fragments \sidecite{von_der_malsburg_theory_2022, von_der_malsburg_concerning_2018}: After receiving an input, the neurons get excited and fire with a higher probability. However, their firing probability decreases quickly if not supported by neighbouring neurons. Thus, uncertainty and potential net fragments govern timestep 0, while the network reaches an attractor state shortly after. 
+The output is sampled form a Bernoulli distribution, i.e., $B(p) = P(X = 1) = p = 1 - P(X=0)$. Having a neuron whose firing probability $p$ is governed by the neighbourhood activity and the environment allows the implementation of the behaviour of net fragments \sidecite{von_der_malsburg_theory_2022, von_der_malsburg_concerning_2018}: After receiving an input, the neurons get excited and fire with a higher probability. However, their firing probability decreases quickly if not supported by neighbouring neurons. Thus, uncertainty and potential net fragments govern timestep 0, while the network reaches an attractor state shortly after. 
 
 \subsection{Properties}
 The proposed neuron implements a stochastic process that allows it to fire even when the probability of it firing is low or, conversely, not to fire when the probability is high.
@@ -114,7 +114,7 @@ Furthermore, using many binary neurons and sparse network activations increases 
 During inference, the stochastic process can be disabled using a fixed threshold of $0.5$, resulting in a more stable network.
 
 Moreover, flipping neurons help to implement alternative pathways and cells required when a single cell is part of two mutually exclusive net fragments \sidecite{von_der_malsburg_neural_1987}.
-Alternative cells are a set of cells with afferent connections. The stochastic property of Bernoulli neurons helps to solve the symmetry problem by encouraging each cell to undergo divergent connectivity changes during training so that it becomes part of mutually exclusive net fragments.
+Alternative cells are a set of cells with afferent connections (c.f. \secref{neuroscience_findings_alt_cells}). The stochastic property of Bernoulli neurons helps to solve the symmetry problem by encouraging each cell to undergo divergent connectivity changes during training so that it becomes part of mutually exclusive net fragments.
 
 \subsection{Practical Considerations}
 To prevent the network from being dominated by noise, it is crucial that most of the activation probabilities do not cluster around a mean value of $\mu = 0.5$. Otherwise, a significant proportion of neurons would have high uncertainty about whether they should fire, leading to random firing patterns. This uncertainty problem occurs mainly in the initial phase of training when the network is not yet trained and therefore dominated by uncertainty.
@@ -148,10 +148,10 @@ The fast loop aims to iteratively improve the net fragments in \emph{S1} and the
 \section{Sensory System \emph{S0}}\seclbl{framework_s0}
 The goal of the sensory system is to perceive an input and extract multiple different features based on spatial neighbourhoods that can be used to build net fragments \sidecite{von_der_malsburg_theory_2022, von_der_malsburg_concerning_2018} in the next stage.
 The input shape is $[C_{\text{in}} \times W \times H]$ where $C_{\text{in}}$ is the number of input channels, $W$ the image width and $H$ the image height.
-The output of this stage is of shape $[C_{\text{sensor}} \times W \times H]$, where $C_{\text{sensor}}$ is the number of output channels. Typically, $C_{\text{sensor}}$ is much larger than $C_{\text{in}}$, i.e. $C_{\text{sensor}} \gg C_{\text{in}}$.
-Each output channel represents a feature. Thus, the sensory system extracts multiple features based on a local neighbourhood at each pixel location.
+The output of this stage is of shape $[C_{\text{sensor}} \times W \times H]$, where $C_{\text{sensor}}$ is the number of output channels (i.e. the number of extracted features). Typically, $C_{\text{sensor}}$ is much larger than $C_{\text{in}}$, i.e. $C_{\text{sensor}} \gg C_{\text{in}}$.
+Thus, the sensory system extracts multiple features based on a local neighbourhood at each pixel location.
 
-As described in \secref{framework_building_blocks}, a sensory system can be implemented with hand-crafted filters, Gabor filters \cite{gabor_theory_1946, granlund_search_1978}, or by training a convolutional network \sidecite{lecun_backpropagation_1989} in an autoencoding setting \sidecite{rumelhart_learning_1986}. The advantage of using learned filters over fixed Gabor filters is that they can be optimised for the source data. However, this comes with the cost of additional filter training.
+As described in \secref{framework_building_blocks}, a sensory system can be implemented with hand-crafted filters, Gabor filters \cite{gabor_theory_1946, granlund_search_1978}, or by using the first layer of a pretrained convolutional network \sidecite{lecun_backpropagation_1989}. The advantage of using learned filters over fixed Gabor filters is that they can be optimised for the source data. However, this comes with the cost of additional filter training.
 
 A difficulty is that filter outputs are typically in continuous space and must be converted into a binary activation potential.
 One option is to normalise the sensor signal in the range $(0, .., 1)$ and to use this value as a probability to sample from a Bernoulli distribution, similar to the proposed Bernoulli neurons (c.f. \secref{bernoulli_neuron}).
@@ -166,17 +166,17 @@ These three types of input serve the following purposes:
     \item \textbf{Sensory signal}: The sensory system extracts features from the image to provide initial cell activations. Theoretically, the sensory signal could be used only once at timestep $t=0$. However, feeding the sensory signal into the network at every timestep stabilises the net fragments \sidenote{This can be likened to closing our eyes: After they are closed, we can estimate the location of all objects but with uncertainty. Thus, the net fragments in our brain become unstable, and we can only estimate the object's position based on memories and previous net fragments.}.
     \item \textbf{Previous net fragments}: Net fragments are the output of the stage \emph{S1}, improved over multiple timesteps.
     To access information from the previous timestep, a recurrent connection is required. This connection is implemented by reusing the previous output (previous net fragments) as input.
-    \item \textbf{Object prototypes}: The net fragments are mapped to object prototypes in \emph{S2} using maplets. An inverse function is employed afterwards to map the object prototypes back to local features to provide information about detected objects to \emph{S1}.
+    \item \textbf{Object prototypes}: The net fragments are mapped to object prototypes in \emph{S2} using maplets. An inverse function is employed afterwards to map the object prototypes back to \emph{S1} to provide information about detected objects.
 \end{itemize}
 
-There exist various ways of combining these three types of input signals. For example, the three arrays can be stacked\sidenote{Stacking arrays refers to the process of combining multiple arrays along a specified axis to create a new multidimensional array, e.g. create an array of size $2 \times 2$ out of two arrays with size $1 \times 2$.} to hold all arrays available.
+There exist various ways of combining these three types of input signals. For example, the three arrays can be stacked\sidenote{Stacking arrays refers to the process of combining multiple arrays along a specified axis to create a new multidimensional array, e.g. create an array of size $[2 \times 2]$ out of two arrays with size $[1 \times 2]$.} to hold all arrays available.
 However, stacking all three arrays would lead to a very high-dimensional input.
 A more sophisticated approach is to aggregate (some of) the matrices.
 In the experiments conducted in this thesis (c.f. \secref{exp_s1}), a straightforward approach is used: The previous net fragments can be overridden by the feedback from the object prototypes if the feedback is plausible.
 Only one of these two arrays is used, as these arrays are typically very similar and provide redundant information. The mapping from fragments to object prototypes and back reduces noise, as the feedback of \emph{S2} is not a reconstructed version of the input but rather a reconstruction of an optimised object prototype. Consequently, the feedback of \emph{S2} is typically less noisy and, therefore, preferred.
 
-Nevertheless, the feedback from \emph{S2} is not always correct and, therefore, only incorporated if it is highly similar to the net fragments formed in \emph{S1}. Especially at the beginning of training or when observing unknown objects, the feedback of \emph{S2} should not be incorporated as it can be wrong.
-Such invalid feedback can be detected by measuring the similarity between net fragments and feedback, for example, using Jaccard similarity (c.f. \eqref{jaccard}). Thus, the net fragments are only overridden if the error is below a pre-defined threshold and overriding most likely improves results.
+Nevertheless, the feedback from \emph{S2} is not always correct and only incorporated if it is highly similar to the net fragments formed in \emph{S1}. Especially at the beginning of training or when observing unknown objects, the feedback of \emph{S2} should not be incorporated as it can be wrong.
+Such invalid feedback can be detected by measuring the similarity between net fragments and feedback, for example, using the Jaccard similarity (c.f. \eqref{jaccard}). Thus, the net fragments are only overridden if the error is below a pre-defined threshold and overriding most likely improves results.
 
 \begin{figure}[h]
     \centering
@@ -188,7 +188,7 @@ Such invalid feedback can be detected by measuring the similarity between net fr
 
 In the following, the number of input channels is denoted as $C_{\text{in}}$ and the number of output channels is denoted as $C_{\text{out}}$.
 Note that the feedback matrix from \emph{S2} has the same shape as the net fragments formed in \emph{S1}.
-Since the previous net fragments or the feedback from \emph{S2} is combined with the sensory signal and used as input, the number of input channels is larger than the number of output channels and defined as $C_{\text{in}} = C_{\text{sensor}} + C_{\text{out}}$.
+Since the previous output (net fragments) or the feedback from \emph{S2} is combined with the sensory signal and used as input, the number of input channels is larger than the number of output channels and defined as $C_{\text{in}} = C_{\text{sensor}} + C_{\text{out}}$.
 An overview about the input and output of \emph{S1} is depicted in \figref{s1_input}:
 The output of \emph{S1} is optionally replaced by the feedback of \emph{S2}. In both cases, this array has a size of $[C_{\text{out}} \times W \times H]$ and is stacked with the output from the sensory system of size $[C_{\text{Sensor}} \times W \times H]$, resulting in an input of size $[C_{\text{in}} \times W \times H]$.
 
@@ -208,11 +208,11 @@ The lateral connections are limited to a distance of $n_{l}$ cells along the ver
 Therefore, an output cell $o_{c,w,h}$ has lateral connections to all inputs within the range $\left[(0, ..., C_{\text{in}}) \times (w - n_l, ..., w+n_l) \times (h - n_l, ..., h+n_l)\right]$.
 Such a local neighbourhood is depicted in \figref{connected_local-neighbourhood} for a cell $o_{c,w,h}$.
 An input channel contains either features extracted by the sensory system or the previous net fragments. Thus, a cell can access all features detected by the sensory system or the previous cell states (recurrent connection) in its spatial neighbourhood.
-Furthermore, according to this definition, the cell is also connected to its own previous cell state at $t-1$.
+Furthermore, according to this definition, the cell is also connected to its own previous cell state at timestep $t-1$.
 This type of connection is called self-support and allows a cell to remain active over time by supporting itself.
 Self-support is crucial to ensure the network is stable at the beginning of training (c.f. \secref{lateral_init}). However, after training for a short time, lateral connections are built, the inhibition strength increases so that self-support is not sufficient anymore, and lateral support from other cells is required to remain active.
 
-Patterns can appear at different locations within an image, and the network should be able to recognise it independent of its spatial location \sidecite{fukushima_neocognitron_1980, waibel_phoneme_1987}. 
+Patterns can appear at different positions within an image, and the network should be able to recognise it independent of its spatial location \sidecite{fukushima_neocognitron_1980, waibel_phoneme_1987}. 
 Therefore, lateral support must be position equivariant.
 Convolutional architectures solve this problem with convolutional filters shifting over each pixel location \sidecite{lecun_backpropagation_1989}. This mechanism can also be used to implement the lateral connections: When using a convolutional kernel $\boldsymbol{W}$ with size $\left[C_{\text{out}} \times C_{\text{in}} \times (2n_l+1) \times (2n_l+1) \right]$, each output cell has a connection to its local neighbourhood as defined above.
 Since this kernel is applied at all cell positions, a cell is supported by neighbouring cells that represent the same pattern regardless of the spatial position.
@@ -231,10 +231,10 @@ The previous section introduces how a convolutional kernel $\boldsymbol{W}$ can 
 In this section, it is described how the support strength, i.e. the weights of $\boldsymbol{W}$, can be learned.
 The human brain's learning algorithm is based on local self-organisation and unsupervised (or self-supervised) learning \sidecite{von_der_malsburg_theory_2022}. The biologically most plausible learning algorithm is Hebbian learning \sidecite{hebb_organization_1949}.
 
-Hebbian learning evaluates consistency at each synapse and is well suited for learning lateral connections: If two cells are active together (``fire together''), their weight increases (``wire together'') - this plasticity principle corresponds to the definition of lateral support. During training, the cells are activated in a specific pattern based on the sensory input. Hebbian learning strengthens the connections between simultaneously active cells. Thus, the connection strength between cells associated with the same net fragment is increased, leading to stronger mutual support. Additionally, using negative Hebbian learning, the strength of the lateral support can be reduced between cells that fire in disparity (one of the cells is firing while the other is not).
+Hebbian learning evaluates consistency at each synapse and is well suited for learning lateral connections: If two cells are active together (``fire together''), their weight increases (``wire together'') - this plasticity principle corresponds to the definition of lateral support. During training, the cells are activated in a specific pattern based on the sensory input. Hebbian learning strengthens the connections between simultaneously active cells. Thus, the connection strength between cells associated with the same net fragment is increased, leading to stronger mutual support.
 
 Hebbian learning is introduced in \secref{hebbian}, and it is described how the weight between two cells changes if they fire together (c.f. \eqref{hebb_1}).
-However, lateral support is implemented as a convolutional kernel that is applied at all input positions.
+However, in this thesis, lateral support is implemented as a convolutional kernel that is applied at all input positions.
 Since the same weight is applied at different positions, the update of a connection depends not only on two cells but on multiple cells:
 %
 \begin{align}\eqlbl{hebbu_1}
@@ -276,7 +276,7 @@ A proper initialisation should fulfil the following criteria:
 
 An initialisation strategy that fulfils these criteria is when the weights are initialised with self-support.
 Self-support means that each cell supports itself to remain active over time, i.e. the recurrent connection to the same cell at the previous timestep must be set to $1$.
-Self-support can be implemented by setting all weights $w_{c \times c' \times w \times h}$ of a kernel to $1$ at the indexes that fulfil 
+Self-support can be implemented by setting all weights $w_{c, c', w, h}$ of a kernel to $1$ at the indexes that fulfil 
 $c' = c$, $w = n+1$, and $h = n+1$. Thus, the weight at the middle of a kernel with the same input and output channel index is set to $1$ while the other weights are set to $0$. This initialisation strategy also works for kernels with a different number of input and output channels and is shown in \figref{lateral_init_weights}.
 Such a weight matrix copies the input activations to the output and ensures that the cell's activations at time $t$ and $t+1$ are identical. Therefore, initially, active cells receive a support of $1$ (i.e. one other cell with a lateral weight of $1$ is active).
 However, after applying the Hebbian learning rule, the weights are updated to capture the data's statistics so that active cells receive more support.
